--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,3 @@
 PORT=5151
+SOLANA_RPC_HOST=https://greatest-broken-yard.solana-devnet.quiknode.pro/394e7aa001a61bacf6ce7388ae1bde5c4bd60c74/
+SUGAR_CANDY_MACHINE_COLLECTION_ID=HqNPtgFbudqoHixS7WtQDqJ173RixV34FHcUg1v1VPJi
