--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
+    "@solana/web3.js": "^1.91.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
