--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 PORT=5151
-SOLANA_RPC_HOST=https://greatest-broken-yard.solana-devnet.quiknode.pro/394e7aa001a61bacf6ce7388ae1bde5c4bd60c74/
-SUGAR_CANDY_MACHINE_COLLECTION_ID=HqNPtgFbudqoHixS7WtQDqJ173RixV34FHcUg1v1VPJi
+SOLANA_RPC_HOST=https://solana-devnet.g.alchemy.com/v2/XIuNsLu9CeDJA4J3tzdAmT5PUQ_OQ1sm
+SUGAR_CANDY_MACHINE_COLLECTION_ID=JfGDrsjfBWTpznxP1kAUR4k6tnWJU8deTHmrvfZ5STT
